--- a/assets/styles/security.css
+++ b/assets/styles/security.css
@@ -34,15 +34,15 @@
   .security-form-inputs input {
     width: 90%;
     border-radius: 0.375rem;
-    border: 1px solid var(--navy);;
+    border: 1px solid var(--navy);
     outline: 0;
-    background-color: var(--lightblue);;
+    background-color: var(--lightblue);
     padding: 0.75rem 1rem;
     color: var(--navy);
   }
   
   .security-form-inputs input:focus {
-    border-color: var(--brightblue);;
+    border-color: var(--brightblue);
   }
 
   .security-form-bottom-container{
@@ -136,4 +136,28 @@
   .security-button-submit:active:before,
   .security-button-submit:active:after {
     background: var(--lightblue);
+  }
+
+  .verified-email-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 95vh;
+  }
+
+  .verified-email-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 50em;
+    height: 30em;
+    border-radius: 0.375rem;
+    border: 1px solid var(--navy);
+    color: var(--lightblue);
+  }
+
+  .verified-email-content h1{
+    width: 80%;
+    text-align: center;
   }
