--- a/templates/courses/create.html.twig
+++ b/templates/courses/create.html.twig
@@ -64,7 +64,7 @@
                         <h1>Now choose category which fits best for your course</h1>
                         <h3>It's fine if you can't think of a perfectly fitting category now. You can change it later.</h3>
                     </div>
-                    <div class="create-course-step-input">{{ form_row(form.categories) }}</div>
+                    <div class="create-course-step-input">{{ form_row(form.category) }}</div>
 
                     <div class="create-course-button-section">
                         <button class="btn-default"
