--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -76,7 +76,7 @@
     
 
 <!-- Modal Delete Episode  -->
-{% component ModalComponent with {id: 'delete-user'} %}
+{% component Modal with {id: 'delete-user'} %}
     {% block modal_header %}
         <h1>Delete User</h1>
         <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
