--- a/templates/courses_management/index.html.twig
+++ b/templates/courses_management/index.html.twig
@@ -110,7 +110,7 @@
     
 
 <!-- Modal Delete Episode  -->
-{% component ModalComponent with {id: 'ban-course'} %}
+{% component Modal with {id: 'ban-course'} %}
     {% block modal_header %}
         <h1>Ban Course</h1>
         <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
@@ -130,7 +130,7 @@
 {% endcomponent %}
 
 <!-- Modal Delete Episode  -->
-{% component ModalComponent with {id: 'approve-course'} %}
+{% component Modal with {id: 'approve-course'} %}
     {% block modal_header %}
         <h1>Approve Course</h1>
         <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
